@@ -1,5 +1,9 @@
 2006-02-06  Per Bothner  <per@bothner.com>
 
+	* Language.java (getTypeFor(Object)): New final convenince method.
+	(asType(Object)): Now just a wrapper for getTypeFor.
+	(getTypeFor(Expression)): No longer need to catch exception.
+
 	* Declaration.java (isLexical): New helper method.
 	(isUnknown): New static helper method.
 	* ReferenceExp.java (isUnknown): New method.
